syntax = "proto3";

option csharp_namespace = "CIM.Protos";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc UploadFile(stream FileRequest) returns (StatusRequest);
  rpc DownloadFile(FilesInfoRequest) returns (stream FileRequest);
  rpc GetFilesInfo(HelloRequest) returns (stream FilesInfoRequest);
}
 
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message StatusRequest {
  string Status = 1;
}

message FileRequest {
    string FileName = 1;
    bytes FileBytes =2;
   
}
message FilesInfoRequest {
    string FileName = 1;
    string FilePath = 2;   
}
